# victron-gx-modbus

./: Cargo.toml  README.md
.forgejo/workflows/: publish.yml
examples/: fin.rs  read.rs  set_setpoint.rs  test.rs  test2.rs  test3.rs
src/: ac.rs  battery.rs  ess.rs  lib.rs  lib2.rs  pvinverter.rs  traits.rs
