[package]
name = "victron-gx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
rumqttc = "0.24.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = "1.40.0"
tokio-modbus = "0.15.0"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.20"
