[package]
name = "victron-gx"
version = "0.1.0"
edition = "2024"
description = "A library to communicate with victron GX devices over MQTT"
readme = "README.md"
license = "MIT"

documentation = "https://docs.rs/victron-gx"
homepage = "https://forge.k3s.fr/frank/victron-gx-rs"
repository = "https://forge.k3s.fr/frank/victron-gx-rs"
keywords = ["victron", "multiplus", "multiplus-ii", "cerbo"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
rumqttc = "0.24.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = "1.40.0"
tokio-modbus = "0.15.0"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.20"
